$Id$

2017-12-27  Douglas Gilbert  <dgilbert@interlog.com>

	Remove UINT8, INT8, UINT32 and INT32 typedefs in favour
	of the types from <stdint.h>; for example uint8_t

2017-12-27  Douglas Gilbert  <dgilbert@interlog.com>

	nvmecmds.cpp: according to NVMe 1.3a spec, the SMART/
	health information log page is global and should take
	the global nsid (all ff_s). It also says the Error
	info lpage is "global. Broke WD Black PCIe (NVMe)
	SSD but worked on Intel SSDs. Fix; could break others.

2017-12-27  Douglas Gilbert  <dgilbert@interlog.com>

	os_freebsd.cpp: on error was setting set_nvme_err() to 1,
	not the actual NVMe status value; fix.

2017-12-24  Alex Samorukov  <samm@os2.kiev.ua>
	CircleCI: add FreeBSD cross compilation

2017-12-22  Alex Samorukov  <samm@os2.kiev.ua>
	configure.ac: add -lsbuf to FreeBSD libs to fix static builds.

2017-12-21  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: Start some JSON work. Other cleanups and helper
	functions; potentially new header for those helpers.

2017-12-17  Christian Franke  <franke@computer.org>

	ataprint.cpp: Add JSON support for '-g all', '-l scterc' and
	'-l scttemp'.

	ataprint.cpp: Don't print obsolete SCT Support Level (#940).

2017-12-14  Christian Franke  <franke@computer.org>

	ataprint.cpp: JSON '-A' output: Add booleans and string for attribute
	flags.  Remove string array.  Rename table.

	ataprint.cpp: Add JSON support for '-l [x]error'.

2017-12-13  Christian Franke  <franke@computer.org>

	smartctl.cpp, smartctl.8.in: Rename '--json=a' to '--json=o'.

	smartctl.cpp: Show command line error messages in JSON output.

	ataprint.cpp: Add JSON support for '-l [x]selftest' and
	'-l directory'.

	atacmds.cpp, atacmds.h: Move self-test print functions to ...
	ataprint.cpp: ... here.
	smartd.cpp: Rework self-test error counting.

	ataprint.cpp: Add JSON support for '-c'.

	atacmds.cpp, atacmds.h: Change return type of capability checks to
	bool.  Declare simple checks inline.
